--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^17.0.2",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^6.3.0",
