--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.0",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
