--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-twitter-embed": "^4.0.4",
     "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
