--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "html-react-parser": "^3.0.4",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
     "react-collapsible": "^2.10.0",
