--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "html-react-parser": "^3.0.4",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
